--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,6 +6,6 @@
   %body
     =content
     %script(src="/js/jquery-2.2.0.min.js")
-    %script(type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=visualization")
+    %script(type="text/javascript" src="https://maps.google.com/maps/api/js?libraries=visualization")
     %script(src="/js/mapStyles.js")
     %script(src="/js/scripts.js")
