--- a/views/index.haml
+++ b/views/index.haml
@@ -1,6 +1,6 @@
 %header
   #results
-    .display here's a heatmap of <span id="current-map">nothing</span>
+    .display feel the heat of <span id="current-map">nothing</span>
   %input#search(type="text" autocomplete="off" placeholder="search")
 
 #map
