--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 %html
   %head
-    %title heatmap
+    %title feel the heat
     %link(rel="stylesheet" href="/stylesheets/main.css")
   %body
     =content
